[tool.poetry]
name = "payback-check"
version = "0.0.0"
description = ""
authors = ["Ben Saunders <bsaunders@turo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-ml-common = {git = "https://github.com/turo/python-ml-common.git"}

[tool.poetry.dev-dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
